--- a/style.css
+++ b/style.css
@@ -166,3 +166,37 @@ h5{
 .col-ben>h3{
     color: var(--main-color);
 }
+
+/* ABOUT US */
+
+.row-about{
+    padding: 60px;
+    display: flex;
+    gap: 30px;
+}
+
+.col-about{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    position: relative;
+    line-height: 2em;
+}
+
+.col-about>img{
+    width: 50%;
+    border-radius: 50%;
+}
+
+h6{
+    font-size: 1.3rem;
+    color: var(--main-color);
+}
+
+.absolute{
+    position: absolute;
+    top: 10px;
+    right: 120px;
+    font-size: 2rem;
+    color: var(--main-color);
+}
