--- a/utils.css
+++ b/utils.css
@@ -49,4 +49,11 @@ button{
 .bg-purple{
 	background-color: var(--main-color);
 	color: white;
+	padding-top: 50px;
+	padding-bottom: 30px;
+}
+
+.bg-white{
+	margin-bottom: 50px;
+	margin-top: 30px;
 }
